fixed links to github and personal website

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <header>
     <h1 id="name-top"><strong>Jacob Thompson</strong></h1>
     <div class="font-icons">
-      <a href="https://www.github.com/thompson_jacob" target="_blank" class="fab fa-github"></a>
-      <a href="https://www.linkedin.com/in/thompson-jacob/" target="_blank" class="fab fa-linkedin"></a>
+      <a href="https://github.com/thompson-jacob" target="_blank" class="fab fa-github"></a>
+      <a href="https://www.linkedin.com/in/thompson-jacob" target="_blank" class="fab fa-linkedin"></a>
     </div>
     <span class="contact">(314)560-0618</span> 
     <span class="divider">&nbsp; | &nbsp;</span>
     <a class="contact" href="mailto: Cobalt7291@gmail.com">Cobalt7291@gmail.com</a>
     <span class="divider">&nbsp; | &nbsp;</span>
-    <a class="contact" href="thompson_jacob.io">Personal Website</a>
+    <a class="contact" href="https://thompson-jacob.github.io/">Personal Website</a>
   </header>
 
   
