push before revert

--- a/index.html
+++ b/index.html
@@ -7,50 +7,37 @@
   <title>Jacob Thompson</title>
   <link rel="stylesheet" href="./font-mfizz-2.4.1/font-mfizz.css">
   <script src="https://kit.fontawesome.com/f4de4e78d0.js" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" 
-rel="stylesheet">
-<!-- <link rel="stylesheet" href="/Users/jacobthompson/Downloads/font-mfizz-2.4.1/font-mfizz.css">  -->
-<link rel="stylesheet" href="/font-mfizz.css"> 
-<!-- /Users/jacobthompson/Downloads/font-mfizz-2.4.1 -->
-
 </head>
 <body>
-  <main>
   <header>
-    <h1 id="name-top"><strong>Jacob Thompson</strong></h1>
-    <div class="font-icons">
-      <a href="https://www.github.com/thompson_jacob" target="_blank" class="fab fa-github"></a>
-      <a href="https://www.linkedin.com/in/thompson-jacob/" target="_blank" class="fab fa-linkedin"></a>
-    </div>
-    
+    <div class="name-top"><strong>Jacob Thompson</strong></div>
+    <span>(314)560-0618</span>
     <a href="mailto: Cobalt7291@gmail.com">Cobalt7291@gmail.com</a>
+    <a href="https://www.github.com/thompson_jacob" target="_blank" class="fab fa-github">Personal Website</a>
+    <a href="https://www.linkedin.com/in/thompson-jacob/" target="_blank" class="fab fa-linkedin"></a>
     <a href="thompson_jacob.io">Personal Website</a>
   </header>
 
-  
+  <body>
     
-    <section>
-<<<<<<< HEAD
-      <p class="section-header">SUMMARY</p>
-      Full Stack Web Developer with a knack for delivering customized user stories through Ruby on Rails applications that are backed by PostgreSQL. Utilizes modern frameworks to implement designs that are both dynamic as well as aesthetic. Fascinated by the applications of programming and technology to make a better society.
-=======
+
+    <section class="summary">
+      <span>SUMMARY</span> 
+
       <p class="mb-0 section-header">Summary</p>
       <p class="mt-2">Full Stack Web Developer with a knack for delivering customized user stories through Ruby on Rails applications that are backed by PostgreSQL. Utilizes modern frameworks to implement designs that are both dynamic as well as aesthetic. Fascinated by the applications of programming and technology to make a better society.</p>
->>>>>>> ee113a796bd013aa2851fe723e912a32cbcf6dca
+
     </section>
    
     <section class="skills">
       <div>
-        <h3 class="section-header">Technical Skills</h3>
+        <h3>Technical Skills</h3>
         <p>
           <span>Languages   </span>
         <span>Applications    </span>
         <span>Database Systems    </span>
         </p>
         <p>
-          <i class="icon-postgres"></i> 
-
           <span>Ruby, JavaScript, Python, Java, HTML, CSS  </span>
           <span>Vue.js, Node, Bootstrap, jQuery </span>
           <span> MySQL, MS Access, PostgreSQL</span>
@@ -61,11 +48,11 @@ rel="stylesheet">
     </section>
 
     <section class="education">
-      <h3 class="section-header">EDUCATION</h3>
+      <h3>EDUCATION</h3>
       <p><span><strong>Full Stack Web Development</strong></span>
-        <span class='date-place'><em>Chicago, IL | November 2020 - March 2021</em></span>
+        <span><em>Chicago, IL | November 2020 - March 2021</em></span>
       </p>
-      <p class='date-place'><strong>Actualize Coding Bootcamp</strong></p>
+      <p>Actualize Coding Bootcamp</p>
       <ul>
         <li><strong>Capstone Project (StonkCharts): </strong>Personally built a web app that allows the user to create customized chart overlays for daily stock data, enabling analysis to find trend lines using TraingVue.js. User data is cached and stored using PostgreSQL and Ruby on Rails.
         </li>
@@ -77,7 +64,7 @@ rel="stylesheet">
           </ul>
         </li>
       </ul>
-      <p><span class='title-heading'><strong>Associate in Science, Computer Programming</strong></span><span class='date-place'><em>Boca Raton, FL | August 2018 - December 2020</em></span>
+      <p><span class='title-heading-left'><strong>Associate in Science, Computer Programming</span><span class='city-heading-right'><em>Boca Raton, FL | August 2018 - December 2020</em></span></strong>
       </p>
       <p class="subhead"><stong>Palm Beach State College</stong></p>
       <p class="subhead"><stong>GPA: 3.6/4.0 - Graduate Cum Laude</stong></p>
@@ -87,21 +74,9 @@ rel="stylesheet">
     </section>
 
     <section class="experience">
-      <h3 class="section-header">EXPERIENCE</h3>
-      <p><span><strong>Web Development Teacher, </strong>The Code LLC.</span>
-        <span  class='date-place'><em>Remote | June 2021 - Present</em></span>
-      </p>
-      <ul>
-        <li>Worked with NYC public school district teaching a bootcamp style coding course virtually
-        </li>
-        <li>Helped students understand the fundamentals of HTML and CSS through hands-on activities
-        </li>
-        <li>
-          Held review sessions and created materials for students to prepare for the W3Schools HTML and CSS certification
-        </li>
-      </ul>
+      <h3>EXPERIENCE</h3>
       <p><span><strong>Options & Securities Broker, </strong>Self-Employed</span>
-        <span  class='date-place'><em>Remote | October 2018 - Present</em></span>
+        <span><em>Remote | October 2018 - Present</em></span>
       </p>
       <ul>
         <li>Outperformed the market by 186% in 2020, doubling the value of my portfolio.
@@ -111,14 +86,14 @@ rel="stylesheet">
       </ul>
 
       <p><span><strong>Delivery Driver, </strong>Delivery Dudes</span>
-        <span  class='date-place'><em>Palm Beach County, FL | February 2019 - July 2020</em></span>
+        <span><em>Palm Beach County, FL | February 2019 - July 2020</em></span>
       </p>
       <ul>
         <li>Coordinated with dispatch and restaurants to ensure organized and timely delivery of orders</li>
         <li>Onboarded two new restaurants by networking and consistently promoting the company</li>
       </ul>
       <p><span><strong>Luigi Di Roma, </strong>Server</span>
-        <span  class='date-place'><em>Deerfield Beach, FL | February 2019 - July 2020</em></span>
+        <span><em>Deerfield Beach, FL | February 2019 - July 2020</em></span>
       </p>
       <ul>
         <li>Trained incoming servers in restaurant policies and procedures</li>
@@ -128,12 +103,11 @@ rel="stylesheet">
         Clerk’s Assistant, WSV Law Firm, 2010 
       </p>
     </section>
-  
+  </body>
 
   <footer>
 
 
   </footer>
-</main>
 </body>
 </html>
