added current experience

--- a/index.html
+++ b/index.html
@@ -98,7 +98,18 @@
 
     <section class="experience">
       <h3 class="mb-0 section-header">Experience</h3>
-      <p class="mt-2"><span><strong>Options & Securities Broker, </strong>Self-Employed</span>
+      <p class="mt-2"><span><strong>Front End Development Teacher </strong>The Code - IKHODI INC.</span>
+        <span  class='date-place'><em>Remote | May 2021 - Present</em></span>
+      </p>
+      <ul>
+        <li>Worked with multiple high schools teaching a bootcamp style coding course virtually
+        </li>
+        <li>Helped students understand the fundamentals of HTML and CSS through hands-on activities
+        </li>
+        <li>Held review sessions and created materials for students to prepare for the W3Schools HTML and CSS certification
+        </li>
+      </ul>
+      <p class="mt-2"><span><strong> Options & Securities Broker, </strong>Self-Employed</span>
         <span  class='date-place'><em>Remote | October 2018 - Present</em></span>
       </p>
       <ul>
