--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
   <header>
-    <h1 id="name-top"><strong>Jacob Thompson</strong></h1>
+    <h1 id="name-top"><strong>Jacob Thompso</strong></h1>
     <div class="font-icons">
       <a href="https://github.com/thompson-jacob" target="_blank" class="fab fa-github"></a>
       <a href="https://www.linkedin.com/in/thompson-jacob" target="_blank" class="fab fa-linkedin"></a>
